<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
   
    tools:context="com.mylove.githubfrist.MainActivity" 
    android:orientation="vertical"
    >
  
    <TextView 
        style="@style/warp_content"
        android:text="@string/lisao1"
        android:background="#FFCCCC33"
        android:textColor="#99FF2233"
        android:textSize="16dp"
        />
    
    <TextView
        style="@style/warp_textCol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_shape"
        android:paddingLeft="3dp"
        android:text="@string/lisao2" />
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/con_shape_top"
        android:text="@string/east"
        android:textSize="22dp"
        android:gravity="center"
        
        />
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/west"
        android:textSize="22dp"
        android:gravity="center"
        android:background="@drawable/stroke_shape"
        />
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/south"
        android:textSize="22dp"
        android:gravity="center"
        android:background="@drawable/stroke_shape"
        />
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/con_shape_bottom"
        android:text="@string/nouth"
        android:textSize="22dp"
        android:gravity="center"
        />
    
    
    <ImageView 
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line_shape"
        android:src="@drawable/meinv09"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
       
        />
    
    <com.mylove.githubfrist.DashedLine
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="5dp"
        ></com.mylove.githubfrist.DashedLine>

</LinearLayout>
